@@ -1,5 +1,5 @@
 Package: cogena
-Version: 1.1.2
+Version: 1.1.3
 Title: co-expressed gene-set enrichment analysis
 Authors@R: c(person("Zhilong", "Jia", role =c("aut", "cre"), 
     email="zhilongjia@gmail.com"), 
@@ -31,6 +31,7 @@ Depends:
     cluster,
     ggplot2,
     gplots,
+    STRINGdb,
     amap
 Imports: 
     methods,
@@ -44,7 +45,7 @@ Imports:
     kohonen,
     biwt,
     Biobase,
-    STRINGdb,
+    igraph,
     reshape2,
     dplyr,
     devtools
@@ -61,6 +62,7 @@ Collate:
     gene2set.R
     geneInCluster.R
     plotPPI.R
+    netInCluster.R
     geneExpInCluster.R
     corInCluster.R
     gmt2list.R
